[package]
name = "composition_v2"
version = "0.0.1"
authors = ["Andrea Fioraldi <andreafioraldi@gmail.com>", "Dominik Maier <domenukk@gmail.com>"]
edition = "2021"

[features]
no_link_main = ["libafl_targets/libfuzzer_no_link_main"]

# mutator. for this we have separate files
mopt = []
cmplog = ["libafl_targets/sancov_cmplog"]

value_profile = ["libafl_targets/sancov_value_profile"]
ngram4 = []
ngram8 = []

fast = []
explore = []
rand_scheduler = []
weighted = []
cov_accounting = []

[dependencies]
libafl = { path = "../LibAFL/libafl/" }
libafl_targets = { path = "../LibAFL/libafl_targets/", features = ["sancov_pcguard_hitcounts", "libfuzzer"] }
# TODO Include it only when building cc
libafl_cc = { path = "../LibAFL/libafl_cc/" }
clap = { version = "~4.2", features = ["default"] }
nix = "0.26"
mimalloc = { version = "*", default-features = false }

[lib]
crate-type = ["staticlib"]
